# EmixerApp

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_hal.h  emixer.cpp  equalizer_processor.cpp  equalizer_processor.h  message_service_jni.cpp  message_service_jni.h
app/src/main/res/drawable/: adapter_icon_selection.xml  bottom_nav_background.xml  circle_selected_icon.xml  circle_users_adapter.xml  circleborderbutton.xml  custom_seekbar_progress.xml  custom_seekbar_thumb.xml  edittext_border.xml  ic_home.xml  ic_launcher_foreground.xml  ic_music_playlist.xml  ic_play.xml  ic_previous.xml  ic_settings.xml  ic_stop.xml  seekbar_background.xml  seekbar_background_component.xml  seekbar_progress.xml  seekbar_progress_color.xml  seekbar_thumb.xml  selected_border.xml
app/src/main/res/layout/: activity_main.xml  adapter_icon_selection.xml  adapter_icons.xml  adapter_user.xml  fragment_add_user.xml  fragment_d_a_o.xml  fragment_db_instance.xml  fragment_info.xml  fragment_manage_user.xml  fragment_room_database.xml  fragment_settings.xml  fragment_user_page.xml  fragment_welcome.xml  item_app.xml  item_simple.xml  seekbar_layout.xml  service_aidl.xml
app/src/main/res/layout-land/: fragment_user_page.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: default_user_icon.xml
app/src/main/res/navigation/: nav_graph.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+59 files in other folders)
